--- a/Easy Hologram 4D/App.xaml
+++ b/Easy Hologram 4D/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="Easy_Hologram_4D.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Hologram4D.xaml">
+          
+             Startup="Application_Startup">
+    
     <Application.Resources>
          
     </Application.Resources>
