--- a/Easy Hologram 4D/Hologram4D.xaml
+++ b/Easy Hologram 4D/Hologram4D.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="Hologram4D" x:Class="Easy_Hologram_4D.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Easy Hologram 4D" Height="1080" Width="1920" Background="Black" Icon="Assets/logo.png" WindowState="Maximized">
+        Title="Easy Hologram 4D" Height="1080" Width="1920" Background="Black" Icon="Assets/logo.png" WindowState="Maximized" AllowDrop="True" Drop="Hologram4D_Drop">
 
     <Grid Background="Black">
         <Grid.RowDefinitions>
